<resources>
    <string name="app_name">InventoryAppStage2</string>

    <string name="product_word">product.</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Products</string>

    <string name="empty_view_title_text">Inventory is Empty...</string>

    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <string name="editor_activity_title_new_product">Add a Product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="editor_insert_product_successful">Product saved</string>

    <string name="editor_insert_product_failed">Error with saving product</string>

    <string name="editor_update_product_successful">Product updated</string>

    <string name="editor_update_product_failed">Error with updating product</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="category_overview">Overview</string>

    <string name="category_supplier">Supplier</string>

    <string name="hint_product_name">Name</string>

    <string name="hint_product_price">Price</string>

    <string name="hint_product_quantity">Quantity</string>

    <string name="unit_product_price">$</string>


    <string name="units">unit(s)</string>

    <string name="hint_supplier_name">Supplier Name</string>

    <string name="hint_supplier_phone_number">Supplier Phone number</string>

    <string name="unknown_name">Unknown productName</string>
    <string name="error_message">Save a product with valid inputs first!</string>
</resources>
