<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_overview"
            style="@style/mainActivityStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />


            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_product_price"
                    android:hint="@string/hint_product_price"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />
                <TextView
                    android:id="@+id/label_price_unit"
                    android:text="@string/unit_product_price"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>


            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_supplier"
            style="@style/mainActivityStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit_product_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="text"
                style="@style/EditorFieldStyle" />


                <EditText
                    android:id="@+id/edit_product_supplier_phone_number"
                    android:hint="@string/hint_supplier_phone_number"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />


        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/call_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Call Supplier"/>
    <Button
        android:id="@+id/increment_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Increment Quantity"/>
    <Button
        android:id="@+id/decrement_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Decrement Quantity"/>
</LinearLayout>


